Avoid menus getting behind the content.  We want to use position: relative for the content to fix the positioning of footnotes and other special positioning elements in the content.

--- a/css/swipl.css
+++ b/css/swipl.css
@@ -206,12 +206,14 @@ span.tagline {
     display: block;
     position: absolute;
     float: left;
+    z-index: 10;
 }
 
 .menubar-container > li > ul.activemenu {
     display: block;
     position: absolute;
     float: left;
+    z-index: 10;
 }
 
 /* any dropdown box */
